# webtemplate

./: .gitignore  CHANGELOG.md  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  run-tests.yml
src/webtemplate_dbca/templates/webtemplate_dbca/: base.html  base_b5.html
tests/: tests.py  urls.py  views.py
tests/templates/tests/: test_page2.html
webtemplate_dbca/templates/webtemplate_dbca/: base_b5.html
webtemplate_dbca/tests/: tests.py  urls.py  views.py
